CSSいろいろ調整
文字の配置が思うようにいかない
class,id属性で指定したかったができず

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html { overflow-y: scroll; }
 
 body { background-color: #afeeee;
-        text-align:center
+        text-align:center;
       }
+#gohome { text-align:right; }
