--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body { background-image: url(picture/bg.png) ;
        text-align: center;
      }
 
-img#laguna { width: 300px;
+img#oyutop { width: 300px;
              height: 300px;
            }
 
